--- a/index.html
+++ b/index.html
@@ -3,16 +3,130 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<title></title>
+		<title>Weather Query</title>
 		<meta name="description" content="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+			crossorigin="anonymous" />
+
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;600;700&display=swap"
+			rel="stylesheet" />
+		<link rel="stylesheet" href="./assets/css/reset.css" />
+		<link rel="stylesheet" href="./assets/css/style.css" />
 	</head>
 	<body>
 		<div class="container">
-			<main></main>
+			<main class="grid__wrap">
+				<!-- Search Bar -->
+				<div class="search-bar__wrap">
+					<form class="d-flex search-bar" role="search">
+						<input
+							class="form-control me-2"
+							type="search"
+							placeholder="Search"
+							aria-label="Search" />
+						<button class="btn btn-outline-success" type="submit">Search</button>
+					</form>
+				</div>
+				<!-- City issued -->
+				<div class="city-query__wrap">
+					<div class="card">
+						<div class="card-body">
+							<h5 class="card-title">Issued City</h5>
+							<div class="card">
+								<span>🌧</span>
+							</div>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item">An item</li>
+								<li class="list-group-item">A second item</li>
+								<li class="list-group-item">A third item</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<!-- Carrousel -->
+				<div class="next-days__wrap">
+					<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<div class="card">
+									<div class="card-body">
+										<h5 class="card-title">Date</h5>
+										<div class="card">
+											<span>🌧</span>
+										</div>
+										<ul class="list-group list-group-flush">
+											<li class="list-group-item">An item</li>
+											<li class="list-group-item">A second item</li>
+											<li class="list-group-item">A third item</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<div class="card">
+									<div class="card-body">
+										<h5 class="card-title">Date</h5>
+										<div class="card">
+											<span>🌧</span>
+										</div>
+										<ul class="list-group list-group-flush">
+											<li class="list-group-item">An item</li>
+											<li class="list-group-item">A second item</li>
+											<li class="list-group-item">A third item</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<div class="card">
+									<div class="card-body">
+										<h5 class="card-title">Date</h5>
+										<div class="card">
+											<span>🌧</span>
+										</div>
+										<ul class="list-group list-group-flush">
+											<li class="list-group-item">An item</li>
+											<li class="list-group-item">A second item</li>
+											<li class="list-group-item">A third item</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+						<button
+							class="carousel-control-prev"
+							type="button"
+							data-bs-target="#carouselExampleIndicators"
+							data-bs-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="visually-hidden">Previous</span>
+						</button>
+						<button
+							class="carousel-control-next"
+							type="button"
+							data-bs-target="#carouselExampleIndicators"
+							data-bs-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="visually-hidden">Next</span>
+						</button>
+					</div>
+				</div>
+				<!-- Local Storage -->
+				<div class="storage-queries__wrap">Local Storage</div>
+			</main>
 		</div>
 
-		<script src="" async defer></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+			crossorigin="anonymous"></script>
+		<script src="./assets /js/script.js" async defer></script>
 	</body>
 </html>
