--- a/index.html
+++ b/index.html
@@ -6,13 +6,117 @@
 		<title></title>
 		<meta name="description" content="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+			crossorigin="anonymous" />
+
+		<link rel="stylesheet" href="./assets/css/style.css" />
 	</head>
 	<body>
 		<div class="container">
-			<main></main>
+			<div class="main__container">
+				<!-- Title -->
+				<div class="title__wraper d-flex justify-content-center align-content-center">
+					<h1 class="display-3">Weather Query</h1>
+				</div>
+				<!-- Search bar -->
+				<div class="search-local__wraper">
+					<div class="container-fluid">
+						<form class="d-flex" role="search">
+							<input
+								class="form-control me-2"
+								type="search"
+								placeholder="Search"
+								aria-label="Search" />
+							<button class="btn btn-outline-success" type="submit">Search</button>
+						</form>
+					</div>
+					<div class="local-storage d-flex flex-column">
+						<h2 class="display-6">Saved Cities</h2>
+						<p>Atlanta</p>
+					</div>
+				</div>
+				<!-- Issued City -->
+				<div class="issued-city__wraper">
+					<div class="card">
+						<div class="card-body">
+							<h2 class="card-title text-primary">Issued City <span>Date</span></h2>
+							<p class="card-text">🌧</p>
+							<ul class="list-group">
+								<li class="list-group-item">An item</li>
+								<li class="list-group-item">A second item</li>
+								<li class="list-group-item">A third item</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<!-- Next days wraper -->
+				<div class="next-days__wraper d-flex flex-wrap justify-content-between">
+					<div class="card next-day-card">
+						<div class="card-body">
+							<h2 class="card-title text-primary">Issued City <span>Date</span></h2>
+							<p class="card-text">🌧</p>
+							<ul class="list-group">
+								<li class="list-group-item">An item</li>
+								<li class="list-group-item">A second item</li>
+								<li class="list-group-item">A third item</li>
+							</ul>
+						</div>
+					</div>
+					<div class="card next-day-card">
+						<div class="card-body">
+							<h2 class="card-title text-primary">Issued City <span>Date</span></h2>
+							<p class="card-text">🌧</p>
+							<ul class="list-group">
+								<li class="list-group-item">An item</li>
+								<li class="list-group-item">A second item</li>
+								<li class="list-group-item">A third item</li>
+							</ul>
+						</div>
+					</div>
+					<div class="card next-day-card">
+						<div class="card-body">
+							<h2 class="card-title text-primary">Issued City <span>Date</span></h2>
+							<p class="card-text">🌧</p>
+							<ul class="list-group">
+								<li class="list-group-item">An item</li>
+								<li class="list-group-item">A second item</li>
+								<li class="list-group-item">A third item</li>
+							</ul>
+						</div>
+					</div>
+					<div class="card next-day-card">
+						<div class="card-body">
+							<h2 class="card-title text-primary">Issued City <span>Date</span></h2>
+							<p class="card-text">🌧</p>
+							<ul class="list-group">
+								<li class="list-group-item">An item</li>
+								<li class="list-group-item">A second item</li>
+								<li class="list-group-item">A third item</li>
+							</ul>
+						</div>
+					</div>
+					<div class="card next-day-card">
+						<div class="card-body">
+							<h2 class="card-title text-primary">Issued City <span>Date</span></h2>
+							<p class="card-text">🌧</p>
+							<ul class="list-group">
+								<li class="list-group-item">An item</li>
+								<li class="list-group-item">A second item</li>
+								<li class="list-group-item">A third item</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+			crossorigin="anonymous"></script>
 
-		<script src="" async defer></script>
+		<script src="./assets/js/script.js" async defer></script>
 	</body>
 </html>
