style: add media query to adjusto to mobile layout

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="container">
 			<div class="main__container">
 				<!-- Title -->
-				<div class="title__wraper d-flex justify-content-center align-content-center">
+				<div class="title__wraper">
 					<h1 class="display-3">Weather Query</h1>
 				</div>
 				<!-- Search bar -->
@@ -35,7 +35,8 @@
 					</div>
 					<div class="local-storage d-flex flex-column">
 						<h2 class="display-6">Saved Cities</h2>
-						<p>Atlanta</p>
+						<button type="button" class="local-btn btn btn-light">Houston</button>
+						<button type="button" class="local-btn btn btn-light">San Diego</button>
 					</div>
 				</div>
 				<!-- Issued City -->
@@ -54,7 +55,7 @@
 				</div>
 				<!-- Next days wraper -->
 				<div class="next-days__wraper d-flex flex-wrap justify-content-between">
-					<div class="card next-day-card">
+					<div class="card next-day-card flex-grow-1">
 						<div class="card-body">
 							<h2 class="card-title text-primary">Issued City <span>Date</span></h2>
 							<p class="card-text">🌧</p>
@@ -65,7 +66,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="card next-day-card">
+					<div class="card next-day-card flex-grow-1">
 						<div class="card-body">
 							<h2 class="card-title text-primary">Issued City <span>Date</span></h2>
 							<p class="card-text">🌧</p>
@@ -76,7 +77,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="card next-day-card">
+					<div class="card next-day-card flex-grow-1">
 						<div class="card-body">
 							<h2 class="card-title text-primary">Issued City <span>Date</span></h2>
 							<p class="card-text">🌧</p>
@@ -87,7 +88,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="card next-day-card">
+					<div class="card next-day-card flex-grow-1">
 						<div class="card-body">
 							<h2 class="card-title text-primary">Issued City <span>Date</span></h2>
 							<p class="card-text">🌧</p>
@@ -98,7 +99,7 @@
 							</ul>
 						</div>
 					</div>
-					<div class="card next-day-card">
+					<div class="card next-day-card flex-grow-1">
 						<div class="card-body">
 							<h2 class="card-title text-primary">Issued City <span>Date</span></h2>
 							<p class="card-text">🌧</p>
