--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 					<div class="container-fluid">
 						<form class="d-flex" role="search">
 							<input
+								id="input"
 								class="form-control me-2"
 								type="search"
 								placeholder="Search"
@@ -113,6 +114,10 @@
 				</div>
 			</div>
 		</div>
+		<script
+			src="https://code.jquery.com/jquery-3.6.1.min.js"
+			integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+			crossorigin="anonymous"></script>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
