--- a/index.html
+++ b/index.html
@@ -19,25 +19,24 @@
 			<div class="main__container">
 				<!-- Title -->
 				<div class="title__wraper">
-					<h1 class="display-3">Weather Query</h1>
+					<h1 class="display-1">Weather Query</h1>
 				</div>
 				<!-- Search bar -->
 				<div class="search-local__wraper">
 					<div class="container-fluid">
-						<form class="d-flex" role="search">
+						<form id="form-query" class="d-flex" role="search">
 							<input
 								id="input"
 								class="form-control me-2"
 								type="search"
 								placeholder="Search"
 								aria-label="Search" />
-							<button class="btn btn-outline-success" type="submit">Search</button>
+							<button class="btn btn-secondary" type="submit">Search</button>
 						</form>
 					</div>
 					<div class="local-storage d-flex flex-column">
 						<h2 class="display-6">Saved Cities</h2>
-						<button type="button" class="local-btn btn btn-light">Houston</button>
-						<button type="button" class="local-btn btn btn-light">San Diego</button>
+						<button type="button" class="local-btn btn btn-warning w-100">Houston</button>
 					</div>
 				</div>
 				<!-- Issued City -->
@@ -53,8 +52,10 @@
 							</ul>
 						</div>
 					</div>
+					<h3 class="display-6">Pronóstico de los 5 días siguientes</h3>
 				</div>
 				<!-- Next days wraper -->
+
 				<div class="next-days__wraper d-flex flex-wrap justify-content-between">
 					<div class="card next-day-card flex-grow-1">
 						<div class="card-body">
