--- a/index.html
+++ b/index.html
@@ -25,12 +25,7 @@
 				<div class="search-local__wraper">
 					<div class="container-fluid">
 						<form id="form-query" class="d-flex" role="search">
-							<input
-								id="input"
-								class="form-control me-2"
-								type="search"
-								placeholder="Search"
-								aria-label="Search" />
+							<input id="input" class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
 							<button class="btn btn-secondary" type="submit">Search</button>
 						</form>
 					</div>
@@ -52,7 +47,7 @@
 							</ul>
 						</div>
 					</div>
-					<h3 class="display-6">Pronóstico de los 5 días siguientes</h3>
+					<h3 class="display-6">Pronóstico de los 5 días siguientes:</h3>
 				</div>
 				<!-- Next days wraper -->
 
@@ -115,10 +110,7 @@
 				</div>
 			</div>
 		</div>
-		<script
-			src="https://code.jquery.com/jquery-3.6.1.min.js"
-			integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
-			crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
