--- a/index.html
+++ b/index.html
@@ -25,13 +25,17 @@
 				<div class="search-local__wraper">
 					<div class="container-fluid">
 						<form id="form-query" class="d-flex" role="search">
-							<input id="input" class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+							<input
+								id="input"
+								class="form-control me-2"
+								type="search"
+								placeholder="Search"
+								aria-label="Search" />
 							<button class="btn btn-secondary" type="submit">Search</button>
 						</form>
 					</div>
 					<div class="local-storage d-flex flex-column">
 						<h2 class="display-6">Saved Cities</h2>
-						<button type="button" class="local-btn btn btn-warning w-100">Houston</button>
 					</div>
 				</div>
 				<!-- Issued City -->
@@ -110,7 +114,10 @@
 				</div>
 			</div>
 		</div>
-		<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+		<script
+			src="https://code.jquery.com/jquery-3.6.1.min.js"
+			integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+			crossorigin="anonymous"></script>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
