chore: add to index.html static content, when page has loaded and as disclaimer tell the user to find any city

--- a/index.html
+++ b/index.html
@@ -42,12 +42,14 @@
 				<div class="issued-city__wraper">
 					<div class="card">
 						<div class="card-body">
-							<h2 id="today-city" class="card-title text-primary">Monterrey</h2>
+							<h2 id="today-city" class="card-title text-primary">
+								Busca una ciudad para comenzar!
+							</h2>
 							<img id="today-icon" class="card-text" />
 							<ul class="list-group">
-								<li id="today-temp" class="list-group-item">Temp: 74.57 ℉</li>
-								<li id="today-wind" class="list-group-item">Wind Speed: 1.23 km/h</li>
-								<li id="today-humidity" class="list-group-item">Humidity: 82 %</li>
+								<li id="today-temp" class="list-group-item">Datos de temperatura</li>
+								<li id="today-wind" class="list-group-item">Datos de viento</li>
+								<li id="today-humidity" class="list-group-item">Datos de humedad</li>
 							</ul>
 						</div>
 					</div>
