chore: add message to tell las  searched cities

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						</form>
 					</div>
 					<div class="local-storage d-flex flex-column">
-						<h2 class="display-6">Saved Cities</h2>
+						<h2 class="display-6">Ciudades buscadas en tu sesión anterior:</h2>
 					</div>
 				</div>
 				<!-- Issued City -->
@@ -60,56 +60,56 @@
 				<div class="next-days__wraper d-flex flex-wrap justify-content-between">
 					<div class="card next-day-card flex-grow-1">
 						<div class="card-body">
-							<h2 id="dayOne-date" class="card-title text-primary">Day 2</h2>
+							<h2 id="dayOne-date" class="card-title text-primary">Día 2</h2>
 							<img id="dayOne-icon" class="card-text" />
 							<ul class="list-group">
-								<li id="dayOne-temp" class="list-group-item">Datos por confirmar</li>
-								<li id="dayOne-wind" class="list-group-item">Datos por confirmar</li>
-								<li id="dayOne-humidity" class="list-group-item">Datos por confirmar</li>
+								<li id="dayOne-temp" class="list-group-item">Datos de temperatura</li>
+								<li id="dayOne-wind" class="list-group-item">Datos de viento</li>
+								<li id="dayOne-humidity" class="list-group-item">Datos de humedad</li>
 							</ul>
 						</div>
 					</div>
 					<div class="card next-day-card flex-grow-1">
 						<div class="card-body">
-							<h2 id="dayTwo-date" class="card-title text-primary">Day 3</h2>
+							<h2 id="dayTwo-date" class="card-title text-primary">Día 3</h2>
 							<img id="dayTwo-icon" class="card-text" />
 							<ul class="list-group">
-								<li id="dayTwo-temp" class="list-group-item">Datos por confirmar</li>
-								<li id="dayTwo-wind" class="list-group-item">Datos por confirmar</li>
-								<li id="dayTwo-humidity" class="list-group-item">Datos por confirmar</li>
+								<li id="dayTwo-temp" class="list-group-item">Datos de temperatura</li>
+								<li id="dayTwo-wind" class="list-group-item">Datos de viento</li>
+								<li id="dayTwo-humidity" class="list-group-item">Datos de humedad</li>
 							</ul>
 						</div>
 					</div>
 					<div class="card next-day-card flex-grow-1">
 						<div class="card-body">
-							<h2 id="dayThree-date" class="card-title text-primary">Day 4</h2>
+							<h2 id="dayThree-date" class="card-title text-primary">Día 4</h2>
 							<img id="dayThree-icon" class="card-text" />
 							<ul class="list-group">
-								<li id="dayThree-temp" class="list-group-item">Datos por confirmar</li>
-								<li id="dayThree-wind" class="list-group-item">Datos por confirmar</li>
-								<li id="dayThree-humidity" class="list-group-item">Datos por confirmar</li>
+								<li id="dayThree-temp" class="list-group-item">Datos de temperatura</li>
+								<li id="dayThree-wind" class="list-group-item">Datos de viento</li>
+								<li id="dayThree-humidity" class="list-group-item">Datos de humedad</li>
 							</ul>
 						</div>
 					</div>
 					<div class="card next-day-card flex-grow-1">
 						<div class="card-body">
-							<h2 id="dayFour-date" class="card-title text-primary">Day 5</h2>
+							<h2 id="dayFour-date" class="card-title text-primary">Día 5</h2>
 							<img id="dayFour-icon" class="card-text" />
 							<ul class="list-group">
-								<li id="dayFour-temp" class="list-group-item">Datos por confirmar</li>
-								<li id="dayFour-wind" class="list-group-item">Datos por confirmar</li>
-								<li id="dayFour-humidity" class="list-group-item">Datos por confirmar</li>
+								<li id="dayFour-temp" class="list-group-item">Datos de temperatura</li>
+								<li id="dayFour-wind" class="list-group-item">Datos de viento</li>
+								<li id="dayFour-humidity" class="list-group-item">Datos de humedad</li>
 							</ul>
 						</div>
 					</div>
 					<div class="card next-day-card flex-grow-1">
 						<div class="card-body">
-							<h2 id="dayFive-date" class="card-title text-primary">Day 6</h2>
+							<h2 id="dayFive-date" class="card-title text-primary">Día 6</h2>
 							<img id="dayFive-icon" class="card-text" />
 							<ul class="list-group">
-								<li id="dayFive-temp" class="list-group-item">Datos por confirmar</li>
-								<li id="dayFive-wind" class="list-group-item">Datos por confirmar</li>
-								<li id="dayFive-humidity" class="list-group-item">Datos por confirmar</li>
+								<li id="dayFive-temp" class="list-group-item">Datos de temperatura</li>
+								<li id="dayFive-wind" class="list-group-item">Datos de viento</li>
+								<li id="dayFive-humidity" class="list-group-item">Datos de humedad</li>
 							</ul>
 						</div>
 					</div>
